cabal-version:      2.0
name:               brassica
version:            0.1.0.0
synopsis:           A sound change applier.
description:
  Please see the README on GitHub at <https://github.com/githubuser/brassica#readme>

category:
homepage:           https://github.com/bradrn/brassica#readme
bug-reports:        https://github.com/bradrn/brassica/issues
author:             Brad Neimann
copyright:          2020 Brad Neimann
license:            BSD3
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  README.md
  -- ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/bradrn/brassica

library
  exposed-modules: Brassica.SoundChange
                 , Brassica.SoundChange.Apply
                 , Brassica.SoundChange.Category
                 , Brassica.SoundChange.Parse
                 , Brassica.SoundChange.Tokenise
                 , Brassica.SoundChange.Types
                 , Brassica.Paradigm
                 , Brassica.Paradigm.Parse
                 , Brassica.MultiZipper
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
                   base >=4.7 && <5
                 , containers >=0.6 && <0.7
                 , megaparsec >=8.0 && <8.1
                 , mtl >=2.2 && <2.3
                 , parser-combinators >=1.2 && <1.3
                 , split >=0.2 && <0.3
                 , transformers >=0.5 && <0.6

  default-language: Haskell2010

executable brassica
  main-is:          Main.hs
  hs-source-dirs:   cli
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
                    base >=4.7 && <5
                  , brassica
                  , bytestring ^>=0.10
                  , conduit ^>=1.3
                  , text ^>=1.2

  default-language: Haskell2010

benchmark paradigm-bench
  type:             exitcode-stdio-1.0
  main-is:          Paradigm.hs
  hs-source-dirs:   bench
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
                    base >=4.7 && <5
                  , brassica
                  , criterion >=1.5 && <1.6

  default-language: Haskell2010

test-suite paradigm-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
                    base >=4.7 && <5
                  , brassica
                  , tasty
                  , tasty-golden
                  , tasty-hunit
                  , directory
                  , bytestring ^>=0.10
                  , text ^>=1.2
                  , transformers
                  , conduit ^>=1.3

  default-language: Haskell2010
