cabal-version:      2.0
name:               brassica
version:            0.3.0
synopsis:           Featureful sound change applier
description:
  The Brassica library for the simulation of sound changes in historical linguistics and language construction.
  For further details, please refer to the README below or at <https://github.com/bradrn/brassica#readme>.

category:           Linguistics
homepage:           https://github.com/bradrn/brassica#readme
bug-reports:        https://github.com/bradrn/brassica/issues
author:             Brad Neimann
maintainer:         Brad Neimann
copyright:          2020-2022 Brad Neimann
license:            BSD3
license-file:       LICENSE
build-type:         Simple
extra-doc-files:
  README.md
  ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/bradrn/brassica

library
  exposed-modules: Brassica.SoundChange
                 , Brassica.SoundChange.Apply
                 , Brassica.SoundChange.Apply.Internal
                 , Brassica.SoundChange.Apply.Internal.MultiZipper
                 , Brassica.SoundChange.Category
                 , Brassica.SoundChange.Frontend.Internal
                 , Brassica.SoundChange.Parse
                 , Brassica.SoundChange.Tokenise
                 , Brassica.SoundChange.Types
                 , Brassica.SFM.MDF
                 , Brassica.SFM.SFM
                 , Brassica.Paradigm
  other-modules:   Brassica.Paradigm.Apply
                 , Brassica.Paradigm.Parse
                 , Brassica.Paradigm.Types
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
                   base >=4.7 && <5
                 , containers >=0.6 && <0.7
                 , deepseq >=1.4 && <1.6
                 , fast-myers-diff ==0.0.0
                 , megaparsec >=8.0 && <9.7
                 , mtl >=2.2 && <2.4
                 , parser-combinators >=1.2 && <1.3
                 , split >=0.2 && <0.3
                 , transformers >=0.5 && <0.7
                 , vector >=0.13 && <0.14

  default-language: Haskell2010

executable brassica
  main-is:          Main.hs
  other-modules:    Server
  hs-source-dirs:   cli
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
                    base >=4.7 && <5
                  , brassica
                  , aeson ^>=2.2
                  , attoparsec-aeson ^>=2.2
                  , bytestring >=0.10 && <0.13
                  , conduit ^>=1.3
                  , conduit-extra ^>=1.3
                  , deepseq >=1.4 && <1.6
                  , optparse-applicative ^>=0.17.1 || ^>=0.18
                  , parallel ^>= 3.2
                  , text >=1.2 && <2.2

  default-language: Haskell2010

executable brassica-pb
  main-is:          Main.hs
  hs-source-dirs:   cli-pb
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
                    base >=4.7 && <5
                  , brassica
                  , bytestring >=0.10 && <0.13
                  , conduit ^>=1.3
                  , optparse-applicative ^>=0.17.1 || ^>=0.18
                  , text >=1.2 && <2.2

  default-language: Haskell2010

benchmark changes-bench
  type:             exitcode-stdio-1.0
  main-is:          Changes.hs
  hs-source-dirs:   bench
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
                    base >=4.7 && <5
                  , brassica
                  , criterion >=1.5 && <1.7
                  , file-embed >=0.0.15 && <0.0.16
                  , parallel ^>= 3.2
                  , text >=1.2 && <1.3

  default-language: Haskell2010

benchmark paradigm-bench
  type:             exitcode-stdio-1.0
  main-is:          Paradigm.hs
  hs-source-dirs:   bench
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
                    base >=4.7 && <5
                  , brassica
                  , criterion >=1.5 && <1.7

  default-language: Haskell2010

test-suite changes-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
                    base >=4.7 && <5
                  , brassica
                  , tasty ^>=1.4
                  , tasty-golden ^>=2.3
                  , bytestring
                  , text >=1.2 && <2.1
                  , transformers ^>=0.5
                  , conduit ^>=1.3
                  , utf8-string ^>=1.0

  default-language: Haskell2010
