name:                brassica-interop
version:             0.0.3
-- synopsis:
-- description:
license:             BSD3
-- license-file:        LICENSE
author:              Brad Neimann
copyright:           2021-2022 Brad Neimann
category:            Web
build-type:          Simple
-- extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BrassicaInterop
  build-depends:       base >= 4.7 && < 5
                     , brassica
                     , bytestring >= 0.10 && < 0.11
                     , utf8-string >= 1.0 && < 1.1
  default-language:    Haskell2010
  ghc-options:         -stubdir stub -o brassica-interop.a -static -optl-static -staticlib -Wall
