name:                brassica-interop
version:             0.1.0
-- synopsis:
-- description:
license:             BSD3
-- license-file:        LICENSE
author:              Brad Neimann
copyright:           2021-2022 Brad Neimann
category:            Web
build-type:          Simple
-- extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -stubdir stub -o libbrassica-interop.so -dynamic
  hs-source-dirs:      src
  exposed-modules:     BrassicaInterop
  build-depends:       base >= 4.7 && < 5
                     , brassica
                     , bytestring
                     , deepseq
                     , utf8-string >= 1.0 && < 1.1
  default-language:    Haskell2010

