name:                brassica-web
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
-- license-file:        LICENSE
author:              Brad Neimann
copyright:           2021-2022 Brad Neimann
category:            Web
build-type:          Simple
-- extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Common
  build-depends:       base >= 4.7 && < 5
                     , reflex-dom >= 0.6 && < 0.7
                     , ghcjs-dom >= 0.9 && < 0.10
                     , jsaddle >= 0.9 && < 0.10
                     , containers >= 0.6 && < 0.7
                     , shakespeare >= 2.0 && < 2.1
                     , text >= 1.2 && < 1.3
  default-language:    Haskell2010
  ghc-options:         -Wall
  
                    
executable brassica-web
  hs-source-dirs:      brassica
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , brassica
                     , brassica-web
                     , reflex-dom >= 0.6 && < 0.7
                     , blaze-html >= 0.9 && < 0.10
                     , containers >= 0.6 && < 0.7
                     , file-embed >= 0.0.15 && < 0.0.16
                     , shakespeare >= 2.0 && < 2.1
                     , text >= 1.2 && < 1.3
  default-language:    Haskell2010
  ghc-options:         -Wall

executable builder-web
  hs-source-dirs:      builder
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , brassica
                     , brassica-web
                     , reflex-dom >= 0.6 && < 0.7
                     , blaze-html >= 0.9 && < 0.10
                     , shakespeare >= 2.0 && < 2.1
                     , text >= 1.2 && < 1.3
  default-language:    Haskell2010
  ghc-options:         -Wall